--- a/class_k_n_w_robot.html
+++ b/class_k_n_w_robot.html
@@ -1261,7 +1261,7 @@ false If the inclinometer was not assigned to the pin</dd></dl>
 <dd>
 false If the IR sensor was not assigned to the pin</dd></dl>
 <p>Example code:</p>
-<div class="fragment"><div class="line"><span class="comment">// Assuming an IR sensor is wired and connected to digital pin 10</span></div><div class="line"><span class="keywordtype">int</span> IRSensorId = 10;</div><div class="line"><span class="keywordtype">bool</span> success = myRobot-&gt;<a class="code" href="class_k_n_w_robot.html#a1d8eaa7d3d286d00f8a48f5bb6049e14">setupIR</a>(IRSensorId, 10);</div><div class="line"><span class="keywordflow">if</span> (success) {</div><div class="line">  <span class="comment">// Now ready to use the IR sensor with pingSensorId</span></div><div class="line">}</div></div><!-- fragment --> 
+<div class="fragment"><div class="line"><span class="comment">// Assuming an IR sensor is wired and connected to digital pin 10</span></div><div class="line"><span class="keywordtype">int</span> IRSensorId = 10;</div><div class="line"><span class="keywordtype">bool</span> success = myRobot-&gt;<a class="code" href="class_k_n_w_robot.html#a1d8eaa7d3d286d00f8a48f5bb6049e14">setupIR</a>(IRSensorId, 10);</div><div class="line"><span class="keywordflow">if</span> (success) {</div><div class="line">  <span class="comment">// Now ready to use the IR sensor with scanIR and getIR</span></div><div class="line">}</div></div><!-- fragment --> 
 </div>
 </div>
 <a class="anchor" id="a79c83d9b2f0d080d7725964d2bcfc8dc"></a>
